# DailyProblem

./: .gitignore  readme.md
cpp/NLTimeUTC/NLTimeUTC/: CMakeLists.txt
cpp/NLTimeUTC/NLTimeUTC/src/: CMakeLists.txt  NLTimeUTC.h  main.cpp
cpp/app/ExternalProjectExample/ExternalProjectExample/: CMakeLists.txt
cpp/app/ExternalProjectExample/ExternalProjectExample/extLib/: ProjectB.cmake  TagLib.cmake
cpp/app/ExternalProjectExample/ExternalProjectExample/src/: CMakeLists.txt  main.cpp
cpp/app/GetAllFile/Projects/GetAllFile/: CMakeLists.txt
cpp/app/MsgQSpeedTest/MsgQSpeedTest/src/: CMakeLists.txt  SpeedTest.cpp  SpeedTest.h  main.cpp
cpp/app/SFLib/Projects/SFLib/: CMakeLists.txt
cpp/app/TestPlayGround/lib/QuickFixDataCtrl/: CMakeLists.txt
cpp/lib/network/: CMakeLists.txt  MCastArbitrator.cpp  MCastArbitrator.h  MultiCast.cpp  MultiCast.h  TCPCast.cpp  TCPCast.h  UDPCast.cpp  UDPCast.h
devTools/projectManager/: README.md  install_manager.sh  projectManager.sh  pyproject.toml
devTools/projectManager/projectmanager/app/: main.py
devTools/projectManager/projectmanager/internal/: commonConst.py
devTools/projectManager/projectmanager/internal/projectCreator/: cppCreator.py  k8sCreator.py  projectCreatorBase.py  pythonCreator.py
devTools/projectManager/tests/: test_python_creator.py
python/flask_sqlalchemy/: README.md  pyproject.toml
python/flask_sqlalchemy/flask_sqlalchemy/: database.sqlite3
python/flask_sqlalchemy/flask_sqlalchemy/postgresql_example/: README.md  database.py  models.py  schema.py
python/flask_sqlalchemy/tests/: test_flask_sqlalchemy.py
python/german_learning_tools/: .gitlab-ci.yml  Doxyfile  README.md  pyproject.toml
python/german_learning_tools/chart/: .helmsignore  Chart.yaml  values.dev.yaml  values.prod.yaml
python/german_learning_tools/chart/templates/: workload.yaml
python/german_learning_tools/dockerEnv/: BuildImageDeployer.sh  BuildImageDev.sh  BuildImageRunner.sh  Dockerfile.Deploy  Dockerfile.Run
python/german_learning_tools/dockerEnv/dev/: start_dev_container.sh
python/german_learning_tools/dockerEnv/prod/: docker-compose.yml
python/german_learning_tools/german_learning_tools/app/: Mainpage.dox  get_nouns.py  main.py
python/german_learning_tools/scripts/: install.vscode.sh
python/german_learning_tools/tests/: test_german_learning_tools.py
python/graphql-python/: pyproject.toml
python/graphql-python/hackernews/: db.sqlite3
python/graphql-python/hackernews/hackernews/: schema.py  settings.py  urls.py
python/graphql-python/hackernews/links/: schema.py
python/graphql-python/hackernews/links/migrations/: 0001_initial.py
python/graphql-python/tests/: test_graphql_python.py
python/json_template_trying/: pyproject.toml
python/json_template_trying/json_template_trying/: future_ult.json  main.py  readme.md  ult_schema.back.json  ult_schema.json
python/json_template_trying/tests/: test_json_template_trying.py
python/poetry-demo/: pyproject.toml
python/public_ip_reporter/: .gitignore  .gitlab-ci.yml  Doxyfile  ExportPythonEnv.sh  README.md  environment.yml  pyproject.toml
python/public_ip_reporter/chart/: Chart.yaml  values.dev.yaml  values.prod.yaml
python/public_ip_reporter/chart/templates/: workload.yaml
python/public_ip_reporter/diagrams/: readme.puml
python/public_ip_reporter/dockerEnv/: BuildImageDeployer.sh  BuildImageDev.sh  BuildImageRunner.sh  Dockerfile.Dev
python/public_ip_reporter/dockerEnv/dev/: start_dev_container.sh
python/public_ip_reporter/dockerEnv/prod/: docker-compose.yml
python/public_ip_reporter/public_ip_reporter/app/: Email_Writer.py  Mainpage.dox  main.py  pip_report.service  pip_report.timer
python/public_ip_reporter/tests/: test_public_ip_reporter.py
python/python_mock_trying/: Dockerfile  README.md  docker-comose.yml  pyproject.toml
python/python_mock_trying/mock_demo/: data_analysis.py  demo_test.py
python/python_mock_trying/python_mock_trying/: env.py  main.py  web_app.py  web_app_declarative.py
python/python_mock_trying/python_mock_trying/NewOfficeManager/: FundManager.py
python/python_mock_trying/python_mock_trying/PgSqlExample/: create_database.sql  database_connection.py  insert_data.sql  model.py  resolver.py  schema.py
python/python_mock_trying/python_mock_trying/PgSqlExample_Declarative/: database_connection.py  resolver.py  schema.py
python/python_mock_trying/python_mock_trying/observability/: apm_agent.py  logging.py
python/python_mock_trying/tests/: test_mockalchemysql.py  test_python_mock_trying.py
python/sfdevtools/: 20230201_130616_1n65sGGjqL_test_file_name.csv  README.md  pyproject.toml
python/sfdevtools/sfdevtools/app/: main.py
python/sfdevtools/sfdevtools/data_cache/: DCache.py  DCacheManager.py  DComponents.py  DConverter.py  DOrderCache.py  DPage.py  DStrategy.py  DTimelyCache.py
python/sfdevtools/sfdevtools/data_control/: TSBackgroundCtrl.py  TSDataCtrl.py  TSDataCtrl_pub.py  TSDataCtrl_sub.py  TSDataManager.py
python/sfdevtools/sfdevtools/devTools/: AtomicData.py  DatetimeTools.py  DiscontinueSeelp.py  FuncFifoQ.py  HDTimer.py  MsgQ.py  SingletonDoubleChecked.py  ThreadClass.py  ThreadQ.py  TimelyCache.py
python/sfdevtools/sfdevtools/grpc_protos/: cop_tools.py  eagle.proto  eagle_pb2.py  eagle_pb2_grpc.py  falcon.proto  falcon_pb2.py  falcon_pb2_grpc.py  magpie.proto  magpie_pb2.py  magpie_pb2_grpc.py  peacock.proto  peacock_pb2.py  peacock_pb2_grpc.py  python_showcases.proto  python_showcases_pb2.py  python_showcases_pb2_grpc.py  ts_cop.proto  ts_cop_pb2.py  tweety.proto  tweety_pb2.py  tweety_pb2_grpc.py
python/sfdevtools/sfdevtools/observability/: log_helper.py
python/sfdevtools/tests/: cop_file  test_dcache.py  test_sfdevtools.py
python/sfdevtoolslight/: README.md  pyproject.toml
python/sfdevtoolslight/sfdevtoolslight/devTools/: DatetimeTools.py  DiscontinueSleep.py  Email_Helper.py  FuncFifoQ.py  HDTimer.py  House_Keeper.py  MsgQ.py  SafeDict.py  ThreadClass.py  ThreadQ.py
python/sfdevtoolslight/sfdevtoolslight/observability/: log_helper.py
python/sfdevtoolslight/tests/: test_sfdevtoolslight.py
(+802 files in other folders)
