[tool.poetry]
name = "projectmanager"
version = "0.1.0"
description = ""
authors = ["SulfredLee <sflee1112@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
logging-json = "^0.2.1"
jinja2 = "^3.1.2"
parse-cmake = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
