[tool.poetry]
name = "flask_sqlalchemy"
version = "0.1.0"
description = ""
authors = ["SulfredLee <sflee1112@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.4.35"
graphene-sqlalchemy = "^2.3.0"
Flask = "^2.1.1"
Flask-GraphQL = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
