[tool.poetry]
name = "graphql-python"
version = "0.1.0"
description = ""
authors = ["SulfredLee <sflee1112@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "2.2.27"
graphene-django = "2.2.0"
django-filter = "2.0.0"
django-graphql-jwt = "0.1.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
