[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["SulfredLee <sflee1112@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
lz4 = "^4.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
