[tool.poetry]
name = "sfdevtools"
version = "1.14.0"
description = ""
authors = ["SulfredLee <sflee1112@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
nanoid = "^2.0.0"
grpcio-tools = "^1.51.1"
grpcio = "^1.51.1"
boto3 = "^1.26.61"
pandas = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
