[tool.poetry]
name = "sfdevtools"
version = "1.25.0"
description = ""
authors = ["SulfredLee <sflee1112@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
nanoid = "^2.0.0"
boto3 = "^1.26.61"
pandas = "^1.5.3"
grpcio-tools = "1.43.0"
grpcio = "1.43.0"
psycopg2-binary = "^2.9.5"
sqlalchemy = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
